--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm run clean && wdio wdio.conf.js && npm run report",
+    "dev": "wdio wdio.conf.js",
+    "test": "npm run clean && wdio wdio.conf.js",
     "report": "allure generate --clean && allure open",
     "clean": "rm -rf allure-results"
   },
@@ -20,6 +21,7 @@
     "allure-commandline": "^2.13.0",
     "chai": "^4.2.0",
     "webdriverio": "^6.1.22"
+
   },
   "devDependencies": {
     "@wdio/allure-reporter": "^6.1.22",
@@ -29,5 +31,6 @@
     "@wdio/selenium-standalone-service": "^6.1.14",
     "@wdio/spec-reporter": "^6.1.14",
     "@wdio/sync": "^6.1.14"
+
   }
 }
